<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/prefrenses_header">


        <ListPreference
            app:defaultValue="0"
            app:entries="@array/academicTime_entries"
            app:entryValues="@array/academicTime_values"
            app:key="academicTime"
            app:title="@string/academic_time_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location_header">
        <PreferenceScreen
            android:title="Home Location"
            android:summary="Set your home location">
            <intent android:action="com.example.labb3ctimesl.activities.LocationActivity"/>
        </PreferenceScreen>


    </PreferenceCategory>

</PreferenceScreen>