<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/cardTypeColor"
        android:layout_width="25dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:background="@drawable/layout_bg">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dummy" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/outerCardLayer"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="4dp"
        android:background="@drawable/card_drawable">

        <ImageView
            android:id="@+id/dummyIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/dummy"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <RelativeLayout
                android:id="@+id/travelInfoWithIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/SampleStartTime"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/travelTypeIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_directions_bus_24" />

                    <TextView
                        android:id="@+id/travelType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/SampleBusNumber"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/SampleEndTime"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/addressArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/travelInfoWithIcon">

                <View
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_drawble" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/darker_gray" />

                <View
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_drawble" />
            </RelativeLayout>

            <TextView
                android:id="@+id/travelDescriptionFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/addressArrow"
                android:text="@string/SampleFrom"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/travelDetailedDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/addressArrow"
                android:text="@string/SampleDetailedInfo"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/travelDescriptionTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/addressArrow"
                android:text="@string/SampleTo"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>